# smsn

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  LICENSE.txt  README.md  build.gradle  gradlew  pom.xml  rexster-smsn-server-example.xml  settings.gradle  smsn.cabal
android/: AndroidManifest.xml  README.txt  flashcards.sh  pom.xml
ardreamo/: ardreamo.pde
brain/: build.gradle  pom.xml
core/: .gitignore  pom.xml
dashboard/: README.md  alias.Rmd  global.R  main.Rmd  properties.Rmd  search.Rmd  server.R  sources.Rmd  ui.R  weight.Rmd
doc/: brain-mode-init-example.el  myotherbrain-analysis-in-R.txt  rexster-extendo-server-example.xml  tinkernotes-emacs-views.graffle  tinkernotes.txt
droidspeak/: LICENSE.txt  pom.xml
eddie/: LICENSE.txt  NOTES.txt  monitron-continuous-query-demo.sh  monitron-rdfizer-demo.sh  pom.xml
extendo-android/: AndroidManifest.xml  README.txt  pom.xml  proguard.cfg
extendo-android-app/: pom.xml
extendo-brain/: pom.xml
extendo-chrome-plugin/: background.js  manifest.json  popup.js
extendo-core/: mobnotes.vim  pom.xml
extendo-devices/: pom.xml
extendo-events/: pom.xml
extendo-hand/: LICENSE.txt  alphabet.txt  pom.xml
extendo-opencalais/: pom.xml
extendo-p2p/: example-broadcaster.sh  example-subscriber.sh  pom.xml
extendo-qrcodes/: pom.xml
extendo-rdf/: pom.xml
extendo-rfid/: pom.xml  rfid-play.sh
extendo-server/: gestural-server.sh  pom.xml
extendo-speech/: pom.xml
extendohand/: pom.xml
extensions/: pom.xml
flashcards/: flashcards.sh  flashcards_history.R  pom.xml
hand/: build.gradle  pom.xml
(+1966 files in other folders)
